2008-09-07  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_draw_balloon):
	more work in alignment of the balloon

2008-09-06  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_set_balloon_width, avt_set_alloon_height):
	balloon is redrawn
	(avt_set_balloon_size): new function

	* avatar.c (avt_draw_balloon):
	more work in alignment of the balloon

2008-08-29  Andreas K. Foerster  <info@akfoerster.de>

	* avtterm.h (execute_process):
	using encoding as parameter
	(avatarsay.c): adapted

2008-08-28  Andreas K. Foerster  <info@akfoerster.de>

	* avtmsg.h, avtmsg.c, avtterm.h, avtterm.c:
	new files - split-offs of avatarsay.c
	avatarsay.c: adapted

2008-08-27  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay:
	reordering code

2008-08-26  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay:
	new commands: .height, .width, .size, .scrolling

	* avatar.c (avt_set_balloon_width):
	enforce a minimum width

2008-08-25  Andreas K. Foerster  <info@akfoerster.de>

	* avatar.c (avt_initialize): scrollmode not reset here

	* avatar.c (avt_scroll_up):
	scrollmode -1 for really doing nothing

	* avatar.c (calculate_balloonmaxheight):
	new function

	* akfavatar.h, avatar.c (avt_set_balloon_width)
	(avt_set_balloon_height):
	new functions

	* avatar.c (avt_draw_balloon, avt_get_max_x, avt_get_max_y)
	(avt_change_avatar_image, avt_initialize):
	balloonheight and balloonwidth stored as number of characters

2008-08-24  Andreas K. Foerster  <info@akfoerster.de>

	* avatarsay.c (open_script):
	script name now "AKFAvatar" + proper error handling

	* avatarsay.c (say_line):
	new function - handles underlining

	* avatarsay.c (process_new_line):
	function removed - handled now in say_line

	* avatarsay.c (say_line):
	handle troff style underlining and bold printing

	* avatar.c (avt_say, avt_say_len):
	don't handle backspace tricks here (avatarsay does now)

	* avatarsay.c (process_script):